--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
     lintOptions {
         abortOnError false
         checkReleaseBuilds false
@@ -52,7 +56,7 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "androidx.multidex:multidex:$multidex_version"
 
-    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    kapt "com.android.databinding:compiler:$gradle_version"
 
     testImplementation "junit:junit:$test_junit"
     androidTestImplementation "androidx.test.ext:junit:$test_ext_junit"
